tdf#56403: Text is right aligned in RTL locales

Draw/Impress is setting writing mode to RTL (which in turn sets text
alignment to right) if the current locale is RTL one. This does not make
sense at all since it means document prepared on a LTR locale and
contains LTR text will appear right aligned on RTL locales.

It would have slightly more sense if SetDefaultWritingMode() actually
just set a default (for e.g. new documents), but that is not the case
here as it affects all documents.

This was introduced in 2c32696a04bc195c8ce61a0df6dcafb8c0c49fe0 with a
branch merge and no further explanation.

Change-Id: Idee0f58e153498a6676a22242d2edd5054b908c6